<resources>
    <string name="app_name">MyMCPS Helper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="pd1_text">X</string>
    <string name="pd2_text">X</string>
    <string name="pd3_text">X</string>
    <string name="pd4_text">X</string>
    <string name="pd5_text">X</string>
    <string name="pd6_text">X</string>
    <string name="pd7_text">X</string>
    <string name="pd8_text">X</string>
    <string name="pd1_classname">Period 1</string>
    <string name="pd2_classname">Period 2</string>
    <string name="pd3_classname">Period 3</string>
    <string name="pd4_classname">Period 4</string>
    <string name="pd5_classname">Period 5</string>
    <string name="pd6_classname">Period 6</string>
    <string name="pd7_classname">Period 7</string>
    <string name="pd8_classname">Period 8</string>
    <string name="class_status_text">Loading Classes...</string>
    <string name="course_name">COURSE</string>
    <string name="tv_titlepercent">100%</string>
    <string name="tv_titlegrade">A</string>
    <string name="tv_summative">Summative</string>
    <string name="tv_formative">Formative</string>
    <string name="tv_weight">Weight</string>
    <string name="summative_weight">Category</string>
    <string name="category">Category</string>
    <string name="pts">Pts</string>
    <string name="percent">Percent</string>
    <string name="summativeweight">60</string>
    <string name="formativeweight">40</string>
    <string name="summativepts">0/0</string>
    <string name="formativepts">0/0</string>
    <string name="summativepercent">100.0</string>
    <string name="formativepercent">100.0</string>
    <string name="category_text">Category(Percent, Grade)</string>
    <string name="weight_text">Weight</string>
    <string name="pts_text">Pts</string>
    <string name="percent_text">Percent</string>
    <string name="summative_text">Summative</string>
    <string name="formative_text">Formative</string>
    <string name="summative_weight_value">60</string>
    <string name="formative_weight_value">40</string>
    <string name="summative_pts_value">0/0</string>
    <string name="formative_pts_value">0/0</string>
    <string name="summative_percent_value">0.0</string>
    <string name="formative_percent_value">0.0</string>
    <string name="overall_text">Overall</string>
    <string name="overall_grade_value">X</string>
</resources>
