<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmhering.mymcpshelper.GradeOverview">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd1_text"
                    android:id="@+id/pd1"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:shadowColor="#000000"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd1_classname"
                    android:id="@+id/textView_pd1"
                    android:layout_column="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd2_text"
                    android:id="@+id/pd2"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd2_classname"
                    android:id="@+id/textView_pd2"
                    android:layout_column="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd3_text"
                    android:id="@+id/pd3"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd3_classname"
                    android:id="@+id/textView_pd3"
                    android:layout_column="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd4_text"
                    android:id="@+id/pd4"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd4_classname"
                    android:id="@+id/textView_pd4"
                    android:layout_column="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd5_text"
                    android:id="@+id/pd5"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd5_classname"
                    android:id="@+id/textView_pd5"
                    android:layout_column="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd6_text"
                    android:id="@+id/pd6"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd6_classname"
                    android:id="@+id/textView_pd6"
                    android:layout_column="2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd7_text"
                    android:id="@+id/pd7"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd7_classname"
                    android:id="@+id/textView_pd7"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pd8_text"
                    android:id="@+id/pd8"
                    android:textColor="#000000"
                    android:layout_column="0"
                    android:layout_marginRight="20dp"
                    android:textSize="25dp"
                    android:background="@drawable/custom_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/pd8_classname"
                    android:id="@+id/textView_pd8"
                    android:layout_column="2" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</RelativeLayout>
